# podstawy-sztucznej-inteligencji

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
entities/: player.py
src/: config.py
src/entities/: player.py  zombie.py
